src/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Agreement</description>
        <label>Active Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adv_Amount_Start_Date__c</fullName>
        <formula>Case__r.Effective_Date_New_Advance_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adv Amount Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Frequency_months__c</fullName>
        <description>Advanced frequency</description>
        <label>Advance Frequency (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advance_amount__c</fullName>
        <description>Current advanced amount</description>
        <label>Advance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Duration_Months__c</fullName>
        <defaultValue>36</defaultValue>
        <label>Agreement Term (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <description>Agreement End Date</description>
        <inlineHelpText>End Date of the agreement</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <description>Agreement Start Date</description>
        <inlineHelpText>Start Date of the agreement</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applied_Load__c</fullName>
        <label>Applied Load</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Amount__c</fullName>
        <label>Bill Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Class__c</fullName>
        <label>Billing Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rate__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Residential Service(RS)</fullName>
                </value>
                <value>
                    <fullName>General Service A (GSA)</fullName>
                </value>
                <value>
                    <fullName>Non-Industrial Service(NIS)</fullName>
                </value>
                <value>
                    <fullName>Industrial Service (IS)</fullName>
                </value>
                <value>
                    <fullName>Government Hospitals, Metered Streetlights &amp; Charitable Institutions (GHMSCI)</fullName>
                </value>
                <value>
                    <fullName>GS-B Industrial Service (IS)</fullName>
                </value>
                <value>
                    <fullName>GS-B Non-industrial Service (NIS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Discount_Program__c</fullName>
        <label>Discount Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCHD</fullName>
                    <label>Senior Citizen Household Discount</label>
                </value>
                <value>
                    <fullName>SCIDISC</fullName>
                    <label>Senior Citizen Institution Discount</label>
                </value>
                <value>
                    <fullName>SPECDISC</fullName>
                    <label>Special Discount</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Payment_Profile__c</fullName>
        <label>Payment Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Delinquent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Service_Number__c</fullName>
        <formula>Contract__r.V10_Account_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Socio_Economic_Profile__c</fullName>
        <label>Socio-Economic Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBG</fullName>
                </value>
                <value>
                    <fullName>Biz GP</fullName>
                </value>
                <value>
                    <fullName>Biz Non-GP</fullName>
                </value>
                <value>
                    <fullName>Microbiz</fullName>
                </value>
                <value>
                    <fullName>Resi High</fullName>
                </value>
                <value>
                    <fullName>Resi Mid</fullName>
                </value>
                <value>
                    <fullName>Resi Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Email__c</fullName>
        <label>Case Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charges_for_breach_of_contract__c</fullName>
        <formula>Commercial_Product__r.Charges_for_breach_of_contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charges for Breach of Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charges_of_Breach__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charges for breach of Contract</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Code_Billing_Class__c</fullName>
        <label>Code Billing Class</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_PSIC__c</fullName>
        <label>Code PSIC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Phase__c</fullName>
        <label>Code Phase</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Premises_Type__c</fullName>
        <label>Code Premises Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Program__c</fullName>
        <label>Code Program</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Rate__c</fullName>
        <label>Code Rate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Segment__c</fullName>
        <label>Code Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Rate_Type__c</fullName>
        <label>Code Service Rate Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Status__c</fullName>
        <label>Code Service Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Supply_Phase__c</fullName>
        <label>Code Service Supply Phase</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Supply_Type__c</fullName>
        <label>Code Service Supply Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Wire_Material__c</fullName>
        <label>Code Service Wire Material</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Wire_Phase__c</fullName>
        <label>Code Service Wire Phase</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Wire_Size__c</fullName>
        <label>Code Service Wire Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Wire_Type__c</fullName>
        <label>Code Service Wire Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Service_Wire_Voltage__c</fullName>
        <label>Code Service Wire Voltage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Voltage_Level__c</fullName>
        <label>Code Voltage Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contestability__c</fullName>
        <label>Contestability Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAPTIVE</fullName>
                    <label>Captive</label>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>CONTESTABLE</fullName>
                    <label>Contestable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_AccountId__c</fullName>
        <description>SFDC Account ID of the Contract. Used in Heroku for Conglomerate Dashboard</description>
        <formula>CASESAFEID(Contract__r.AccountId)</formula>
        <label>Contract &apos;s Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_V10_No__c</fullName>
        <description>V10 Account Number of the Contract. Used in Heroku for Conglomerate Dashboard</description>
        <formula>Contract__r.V10_Account_No__c</formula>
        <label>Contract &apos;s V10 #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contracted_Capacity__c</fullName>
        <label>Contracted Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerSignedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deloading_Capacity__c</fullName>
        <label>Deloading Capacity (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demand_Factor__c</fullName>
        <label>Demand Factor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit Schedule</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Agreement_ID__c</fullName>
        <externalId>true</externalId>
        <label>ERP Agreement ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBD_kW__c</fullName>
        <label>GMBD (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ILP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Successfull_Cont_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Successfull Cont Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Successfull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Successfull Adv Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Factor__c</fullName>
        <label>Load Factor</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Auto_Deposit_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Auto Deposit Amount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSIC</label>
        <referenceTo>PSIC__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Payor Contract of this Service</description>
        <label>Payor</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Services (Payor)</relationshipLabel>
        <relationshipName>Services_Payor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Phase (1Ø), Network</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Three (3)-Wire</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Two (2)-Wire</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye/Delta)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Three (3)-Wire (Delta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Schedule__c</fullName>
        <label>Preferred Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Whole Day</fullName>
                </value>
                <value>
                    <fullName>Flexible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premise_Direction__c</fullName>
        <label>Premises Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premises_Type__c</fullName>
        <label>Premises Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Cemetery</fullName>
                </value>
                <value>
                    <fullName>Commercial Building</fullName>
                </value>
                <value>
                    <fullName>Compound Residential</fullName>
                </value>
                <value>
                    <fullName>Government Building</fullName>
                </value>
                <value>
                    <fullName>Groups of Industry</fullName>
                </value>
                <value>
                    <fullName>High-rise Building</fullName>
                </value>
                <value>
                    <fullName>Meralco Use Substation</fullName>
                </value>
                <value>
                    <fullName>Offices</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pole</fullName>
                </value>
                <value>
                    <fullName>Single Commercial</fullName>
                </value>
                <value>
                    <fullName>Single-Detached Residential</fullName>
                </value>
                <value>
                    <fullName>Single Industry</fullName>
                </value>
                <value>
                    <fullName>Streetlights</fullName>
                </value>
                <value>
                    <fullName>Telecom Cabinet</fullName>
                </value>
                <value>
                    <fullName>Traffic Lights</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premises__c</fullName>
        <label>Premises #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Commercial_Product__r.Master_Product_Type_Icon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RES__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RES</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Retail_Electricity_Supplier__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services (RES)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Program__c</fullName>
        <label>Rate Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Peak Off-Peak</fullName>
                </value>
                <value>
                    <fullName>Net Metering</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>ILP</fullName>
                </value>
                <value>
                    <fullName>MECO-TOU Rate Program</fullName>
                </value>
                <value>
                    <fullName>Net Metering with TOU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Service A (GSA)</fullName>
                </value>
                <value>
                    <fullName>General Service B (GSB)</fullName>
                </value>
                <value>
                    <fullName>General Power (GP)</fullName>
                </value>
                <value>
                    <fullName>Residential Service (RS)</fullName>
                </value>
                <value>
                    <fullName>Government Hospitals, Metered Streetlights &amp; Charitable Institutions (GHMSCI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RES</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RES End - Users</relationshipLabel>
        <relationshipName>Services_Related_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIN__c</fullName>
        <externalId>true</externalId>
        <label>SIN</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate Business Group</fullName>
                </value>
                <value>
                    <fullName>Home and Micro Business</fullName>
                </value>
                <value>
                    <fullName>SME Business Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Barangay__c</fullName>
        <label>Barangay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist (Pinagbuhatan</fullName>
                </value>
                <value>
                    <fullName>Buayang Bato</fullName>
                </value>
                <value>
                    <fullName>Bagong Ilog</fullName>
                </value>
                <value>
                    <fullName>Bagong Katipunan</fullName>
                </value>
                <value>
                    <fullName>Bambang</fullName>
                </value>
                <value>
                    <fullName>Buting</fullName>
                </value>
                <value>
                    <fullName>Caniogan</fullName>
                </value>
                <value>
                    <fullName>Dela Paz</fullName>
                </value>
                <value>
                    <fullName>Kalawaan</fullName>
                </value>
                <value>
                    <fullName>Kapasigan</fullName>
                </value>
                <value>
                    <fullName>Kapitolyo</fullName>
                </value>
                <value>
                    <fullName>Malinao</fullName>
                </value>
                <value>
                    <fullName>Manggahan</fullName>
                </value>
                <value>
                    <fullName>Maybunga</fullName>
                </value>
                <value>
                    <fullName>N Aquino Pilot Com (Napico)</fullName>
                </value>
                <value>
                    <fullName>Oranbo</fullName>
                </value>
                <value>
                    <fullName>Palatiw</fullName>
                </value>
                <value>
                    <fullName>Pasig City (Isolated)</fullName>
                </value>
                <value>
                    <fullName>Pineda</fullName>
                </value>
                <value>
                    <fullName>Rosario</fullName>
                </value>
                <value>
                    <fullName>Sagad</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Joaquin</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>San Nicolas</fullName>
                </value>
                <value>
                    <fullName>Santolan</fullName>
                </value>
                <value>
                    <fullName>San Miguel</fullName>
                </value>
                <value>
                    <fullName>Sta. Cruz</fullName>
                </value>
                <value>
                    <fullName>Sta. Lucia</fullName>
                </value>
                <value>
                    <fullName>Sta. Rosa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_City_Municipality__c</fullName>
        <label>City / Municipality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cainta</fullName>
                </value>
                <value>
                    <fullName>Makati City</fullName>
                </value>
                <value>
                    <fullName>Mandaluyong</fullName>
                </value>
                <value>
                    <fullName>Manila City</fullName>
                </value>
                <value>
                    <fullName>Pasig City</fullName>
                </value>
                <value>
                    <fullName>Pateros</fullName>
                </value>
                <value>
                    <fullName>Q. C.-Kaunlaran Dist 4</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
                <value>
                    <fullName>Taguig City</fullName>
                </value>
                <value>
                    <fullName>Taytay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <label>Service Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Documents_Submitted__c</fullName>
        <label>Service Documents Submitted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement for Extension of Lines and/or Additional Facilities (CA Agreement)</fullName>
                </value>
                <value>
                    <fullName>Certificate of Compliance</fullName>
                </value>
                <value>
                    <fullName>Certificate of Contestability</fullName>
                </value>
                <value>
                    <fullName>Certificate of Final Electrical Inspection (CFEI)</fullName>
                </value>
                <value>
                    <fullName>Certification Issued to CRB for Termination of Service</fullName>
                </value>
                <value>
                    <fullName>Connection Agreement</fullName>
                </value>
                <value>
                    <fullName>Contract for Electric Service</fullName>
                </value>
                <value>
                    <fullName>Contract of Lease</fullName>
                </value>
                <value>
                    <fullName>Copy of Cover Memo to CRB of MIRF Submission</fullName>
                </value>
                <value>
                    <fullName>Metering Installation Registration Form (MIRF) and other attachments</fullName>
                </value>
                <value>
                    <fullName>Net-metering Agreement</fullName>
                </value>
                <value>
                    <fullName>Notarized Undertaking for Leased Properties</fullName>
                </value>
                <value>
                    <fullName>Power Accounts Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Ramp-up Agreement</fullName>
                </value>
                <value>
                    <fullName>Signed and Sealed Electrical Plan (Single line + Load Schedule)</fullName>
                </value>
                <value>
                    <fullName>Supplemental Agreement for Multi Metering per Floor</fullName>
                </value>
                <value>
                    <fullName>Supplier of Last Resort (SoLR) contract</fullName>
                </value>
                <value>
                    <fullName>Transfer Certificate of Title (TCT)</fullName>
                </value>
                <value>
                    <fullName>Copy of Cover Memo to RAO on the MIRF Submission of MERALCO</fullName>
                </value>
                <value>
                    <fullName>CRB Switch Approval</fullName>
                </value>
                <value>
                    <fullName>Disconnection Waiver</fullName>
                </value>
                <value>
                    <fullName>Distribution Asset Study Fees / Receipts*</fullName>
                </value>
                <value>
                    <fullName>Distribution Impact Study Fee / Receipt</fullName>
                </value>
                <value>
                    <fullName>Distribution Wheeling Service Agreement (DWSA) for Embedded Generators</fullName>
                </value>
                <value>
                    <fullName>Fixed Assest Boundary Document (FABD)</fullName>
                </value>
                <value>
                    <fullName>Inter-Connection Agreement (ICA)</fullName>
                </value>
                <value>
                    <fullName>Interruptible Load Program (ILP) Tripartite Agreement</fullName>
                </value>
                <value>
                    <fullName>Zero Vat Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metro Manila</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <label>Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending to Terminate</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Drop with service providing</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Active - Disconnected</fullName>
                </value>
                <value>
                    <fullName>Active - Pending to Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_No__c</fullName>
        <label>Street #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>